--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "buncms-file",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha.1",
+  "license": "Apache-2.0",
   "dependencies": {
     "react-dropzone": "^10.2.1"
   }
