Update to alpha.3 (rename, add bunadmin)

--- a/package.json
+++ b/package.json
@@ -1,8 +1,23 @@
 {
-  "name": "buncms-file",
-  "version": "1.0.0-alpha.2",
+  "name": "bunadmin-plugin-file",
+  "version": "1.0.0-alpha.3",
   "license": "Apache-2.0",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "scripts": {
+    "dev": "npm explore @bunred/bunadmin -- next dev -p 1911",
+    "pack": "rm -rf dist && tsc && npm pack",
+    "cp2plugin": "yarn --froce && cp -R dist node_modules/@bunred/bunadmin/plugins/buncms-file"
+  },
   "dependencies": {
+    "@bunred/bunadmin": "^1.1.0-alpha.5",
     "react-dropzone": "^10.2.1"
+  },
+  "devDependencies": {
+    "prettier": "1.19.1",
+    "typescript": "^3.9.3"
   }
 }
