--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bunadmin-upload-buncms",
-  "version": "1.0.1-alpha.1",
+  "version": "1.1.3-beta.0",
   "license": "Apache-2.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -12,7 +12,7 @@
     "pack": "rm -rf dist & tsc && npm pack"
   },
   "dependencies": {
-    "@bunred/bunadmin": "^1.1.0-beta.1.2",
+    "@bunred/bunadmin": "^1.1.3-beta.0",
     "react-dropzone": "^10.2.1"
   },
   "devDependencies": {
